--- a/image-me/app/pages/tabs/tabs.html
+++ b/image-me/app/pages/tabs/tabs.html
@@ -1,6 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab4Root" tabTitle="Upload" tabIcon="image"></ion-tab>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <!-- <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab> -->
+  <ion-tab [root]="tab4Root" tabTitle="Upload" tabIcon="camera"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Gallery" tabIcon="image"></ion-tab>
 </ion-tabs>
