Improve documentation and add links to other README inside main one - fix typo in upload page

--- a/image-me/app/pages/upload/upload.html
+++ b/image-me/app/pages/upload/upload.html
@@ -11,13 +11,13 @@
             Hello User
         </ion-card-header>
         <ion-card-content>
-            Here's where the meagic happens
+            Here's where the magic happens
         </ion-card-content>
     </ion-card>
     <form method="POST" enctype="multipart/form-data">
         <ion-list>
             <ion-item>
-                <ion-label fixed>Title</ion-label>
+                <ion-label floating>Title</ion-label>
                 <ion-input type="text" name="title" [(ngModel)]="title"></ion-input>
             </ion-item>
             <ion-item>
