--- a/image-me/app/pages/gallery/gallery.html
+++ b/image-me/app/pages/gallery/gallery.html
@@ -4,7 +4,8 @@
     </ion-navbar>
 </ion-header>
 <!-- page container  -->
-<ion-content class="test">
+<ion-content>
+    <ion-refresher (ionRefresh)="doRefresh($event)"></ion-refresher>
     <!-- card -->
     <ion-card>
         <ion-card-header>
