--- a/web/app/pages/upload/upload.html
+++ b/web/app/pages/upload/upload.html
@@ -1,6 +1,6 @@
             <h1>Upload Image</h1>
 
-            <form method="POST" enctype="multipart/form-data">
+            <form *ngIf="active" method="POST" enctype="multipart/form-data">
                 <div class="form-group">
                     <label for="title">Title</label>
                     <input type="text" class="form-control" id="title" name="title" placeholder="My Title" [(ngModel)]="title">
