Fix navigation tabs styling when active

--- a/web/app/pages/app/app.html
+++ b/web/app/pages/app/app.html
@@ -5,8 +5,8 @@
                     <a class="navbar-brand" href="#">Image-Me</a>
                 </div>
                 <ul class="nav nav-tabs">
-                    <li><a routerLink="/upload" routerLinkActive="active">Upload</a></li>
-                    <li><a routerLink="/list" routerLinkActive="active">Gallery</a></li>
+                    <li routerLinkActive="active"><a routerLink="/upload" >Upload</a></li>
+                    <li routerLinkActive="active"><a routerLink="/list" >Gallery</a></li>
                 </ul>
 
             </div>
