--- a/mobile/app/pages/upload/upload.html
+++ b/mobile/app/pages/upload/upload.html
@@ -1,6 +1,11 @@
 <ion-header>
-    <ion-navbar dark>
-        <ion-title>Image-me</ion-title>
+    <ion-navbar>
+        <ion-title>Upload</ion-title>
+        <ion-buttons end>
+            <button (click)="auth.logout()">
+                <ion-icon name="log-out"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 <ion-content>
