--- a/mobile/app/pages/image/image.html
+++ b/mobile/app/pages/image/image.html
@@ -1,9 +1,13 @@
 <ion-header>
-    <ion-navbar dark>
-        <ion-title>Image-me</ion-title>
+    <ion-navbar>
+        <ion-title>Gallery</ion-title>
+        <ion-buttons end>
+            <button (click)="logout()">
+                <ion-icon name="log-out"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
-<!-- page container  -->
 <ion-content>
     <div>
         <div *ngIf="loading">loading...</div>
