removing upload dummy data

--- a/mobile/app/pages/gallery/gallery.html
+++ b/mobile/app/pages/gallery/gallery.html
@@ -3,7 +3,7 @@
         <ion-title>Gallery</ion-title>
         <ion-buttons end>
             <button (click)="auth.logout()">
-                <ion-icon name="log-out"></ion-icon>
+                <ion-icon name="log-out">{{userName}}</ion-icon>
             </button>
         </ion-buttons>
     </ion-navbar>
